[workspace]
members = ["crates/*"]

[package]
edition = "2021"
name = "rusty-gists"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache = {path = "crates/cache"}
collections = {path = "crates/collections"}
math = {path = "crates/math"}
